--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class = "opaque-top-rectangle">
-        <span class="logo"></span>
+        <img class="possum-logo" src="PossumLogo.png" alt="Possum Logo">
+        <p><B>Possum</B></p>
     </div>
     <div class="header-fade"></div>
 </body>
