Made a sign in button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <div class = "opaque-top-rectangle">
         <img class="possum-logo" src="PossumLogo.png" alt="Possum Logo">
-        <p><B>Possum</B></p>
+        <p class = "title">Possum</p>
+        <button class = "sign-in-button">Sign In</button>
     </div>
     <div class="header-fade"></div>
+    
 </body>
 </html>
