--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
 </head>
 <body>
     <div class = "opaque-top-rectangle">
-        <img class="possum-logo" src="PossumLogo.png" alt="Possum Logo">
+        <img class="possum-logo" src="PossumLogo2.png" alt="Possum Logo">
         <p class = "title">Possum</p>
         <button class = "sign-in-button">Sign In</button>
+        <button class = "sign-up-button">Sign Up</button>
     </div>
-    <div class="header-fade"></div>
-    
+    <div class = "hero-container">
+        <div class="header-fade"></div>
+        <p class = "hero-main-text">Unlimited POSSUM Movies, Shows, and More</p>
+        <p class = "price-text">Starts at the low price of $0.01! Satisfaction Guaranteed.</p>
+        <form action="">
+            <div class = "search-bar">
+                <input class = "search-text" type="text" placeholder = "Search a movie...">
+            </div>
+        </form>
+        <div class = "feature-fade"></div>
+    </div>
+    <div class = "feature-container">
+        <p class = "featured-title">Featured</p>
+        <img class="possum-horror-poster" src="PossumHorror.jpg" alt="Possum Horror Movie">
+        <img class="second-movie" src="movie2.jpg" alt="Possum Trot Movie">
+        <img class= "third-movie" src="possum3.jpg" alt="Third Possum Movie">
+    </div>
+    <div class= "footer-container" >
+        
+    </div>
 </body>
 </html>
