changed sizing based off proportions in hero and header and added text in footer

--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         <button class = "sign-up-button">Sign Up</button>
     </div>
     <div class = "hero-container">
-        <div class="header-fade"></div>
         <p class = "hero-main-text">Unlimited POSSUM Movies, Shows, and More</p>
         <p class = "price-text">Starts at the low price of $0.01! Satisfaction Guaranteed.</p>
         <form action="">
             <div class = "search-bar">
-                <input class = "search-text" type="text" placeholder = "Search a movie...">
+                <input type="text" placeholder = "Search a movie...">
             </div>
         </form>
-        <div class = "feature-fade"></div>
     </div>
     <div class = "feature-container">
         <p class = "featured-title">Featured</p>
@@ -32,7 +30,10 @@
         <img class= "third-movie" src="possum3.jpg" alt="Third Possum Movie">
     </div>
     <div class= "footer-container" >
-        
+        <p class="footer-questions"> Questions? call 647-999-999</p>
+        <p class="footer-faq"> FAQ</p>
+        <p class="contact-us">Contact Us</p>
+        <p class="help-center">Help Center</p>
     </div>
 </body>
 </html>
